feat: add email and file handler

--- a/TaskProcessingSystem.csproj
+++ b/TaskProcessingSystem.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="FastEndpoints" Version="5.33.0" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.33.0" />
+    <PackageReference Include="FluentEmail.Core" Version="3.0.2" />
+    <PackageReference Include="FluentEmail.MailKit" Version="3.0.2" />
+    <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
   </ItemGroup>
 
 </Project>
