--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "EmailSettings": {
+        "DefaultFromEmail": "plantmedg33@gmail.com",
+        "SMTPSetting": {
+            "Host": "smtp.gmail.com",
+            "Port": 587
+        },
+        "UserName": "plantmedg33@gmail.com",
+        "Password": "aqdd fceb mfrl sekv"
     }
-  },
-  "AllowedHosts": "*"
 }
