fix: hidden password

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,6 @@
             "Port": 587
         },
         "UserName": "plantmedg33@gmail.com",
-        "Password": "aqdd fceb mfrl sekv"
+        "Password": "<password>"
     }
 }
