feat: using smtp4dev to send local instead of smtp host

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,10 @@
     },
     "AllowedHosts": "*",
     "EmailSettings": {
-        "DefaultFromEmail": "plantmedg33@gmail.com",
+        "DefaultFromEmail": "john.doe@gmail.com",
         "SMTPSetting": {
-            "Host": "smtp.gmail.com",
-            "Port": 587
-        },
-        "UserName": "plantmedg33@gmail.com",
-        "Password": "<password>"
+            "Host": "localhost",
+            "Port": 25
+        }
     }
 }
